refactor: cleanup and add CPU production mode
Changes:
- Add docker/docker-compose.cpu-prod.yml for CPU production deployment
- Update scripts/deploy.sh with up-cpu command for CPU production
- Delete root Dockerfile and docker-compose.yml (use docker/ configs)
- Delete empty app/db/ module (unused)
- Update examples/08_microservices_client.py with env var support
- Update examples/README.md with new install options and env config
- Update docs/DEPLOYMENT.md with CPU deployment instructions
- Update .env.example with microservices and client config
- Update README.md project structure (remove deleted files)

CPU deployment commands:
  ./scripts/deploy.sh build-cpu  # Build CPU images
  ./scripts/deploy.sh test-cpu   # Start CPU test environment
  ./scripts/deploy.sh up-cpu     # Start CPU production environment

--- a/.env.example
+++ b/.env.example
@@ -1,33 +1,41 @@
 # MIRA 环境变量配置示例
 # 复制此文件为 .env 并根据需要修改
 
-# 服务配置
+# ========== 服务配置 ==========
 APP_NAME=MIRA
 DEBUG=false
 HOST=0.0.0.0
 PORT=8000
 
-# 路径配置
+# ========== 路径配置 ==========
 DATA_DIR=./data
 MODELS_CACHE_DIR=./models_cache
 RESULTS_DIR=./results
 STRUCTURES_DIR=./data/structures
 
-# 模型配置
+# ========== 模型配置 ==========
 DEFAULT_DEVICE=cuda
 DEFAULT_DTYPE=float32
 # 启动时预加载的模型（逗号分隔）
 # PRELOAD_MODELS=mace_prod_b3,orb_prod
 
-# 任务配置
+# ========== 任务配置 ==========
 MAX_CONCURRENT_TASKS=4
 TASK_TIMEOUT_SECONDS=86400
 
-# 数据库配置（可选）
-# DATABASE_URL=sqlite+aiosqlite:///./mira.db
+# ========== 微服务架构配置 (Gateway 使用) ==========
+# Worker 服务地址
+# MACE_ORB_URL=http://mira-mace-orb:8001
+# FAIRCHEM_SEVENNET_URL=http://mira-fairchem-sevennet:8002
+# MATGL_URL=http://mira-matgl:8003
+# GRACE_URL=http://mira-grace:8004
+# MATTERSIM_URL=http://mira-mattersim:8005
 
-# Redis 配置（可选，用于任务队列）
-# REDIS_URL=redis://localhost:6379/0
+# ========== 客户端配置 (examples 使用) ==========
+# 连接远程 MIRA 服务时设置
+# MIRA_GATEWAY_URL=http://192.168.100.207:8000
+# MIRA_TIMEOUT=600
+# MIRA_VERBOSE=true
 
-# CORS 配置
+# ========== CORS 配置 ==========
 # CORS_ORIGINS=["http://localhost:3000","http://localhost:8080"]
