fix: ASE 兼容性修复 - 支持 ase.filters 模块
- 修复 ExpCellFilter/StrainFilter 导入错误
- ASE >= 3.27.0 中这些类已移至 ase.filters
- 添加兼容性导入（优先新版本，向后兼容）
- 更新所有 Worker Dockerfile 注释说明
- 添加 ASE 导入测试脚本
- 新增完整 API 文档 (docs/API.md)
- 新增 CPU 兼容性说明 (docs/CPU_COMPATIBILITY.md)
- 新增修复说明文档 (docs/ASE_COMPATIBILITY_FIX.md)

修改文件：
- services/shared/worker_base.py
- app/services/optimization.py
- docker/Dockerfile.mace-orb*
- docker/Dockerfile.matgl*

这次修复确保 MIRA 在 ASE >= 3.27.0 下正常工作，
支持 MTKNPT 等新功能。

--- a/docker/Dockerfile.mace-orb
+++ b/docker/Dockerfile.mace-orb
@@ -34,10 +34,11 @@ RUN python -m pip install --upgrade pip setuptools wheel
 RUN pip install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu121
 
 # 安装公共依赖
+# ASE >= 3.27.0 必需：支持 MTKNPT 等新功能，ExpCellFilter/StrainFilter 在 ase.filters 模块
 RUN pip install \
     numpy>=1.24.0 \
     scipy>=1.10.0 \
-    ase>=3.27.0 \
+    "ase>=3.27.0" \
     phonopy>=2.20.0 \
     torch-dftd>=0.4.0 \
     fastapi>=0.104.0 \
