--- a/docker/Dockerfile.matgl
+++ b/docker/Dockerfile.matgl
@@ -34,6 +34,7 @@ RUN python -m pip install --upgrade pip setuptools wheel
 RUN pip install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu121
 
 # 安装公共依赖
+# ASE >= 3.27.0 必需：支持 MTKNPT 等新功能，ExpCellFilter/StrainFilter 在 ase.filters 模块
 RUN pip install \
     numpy>=1.24.0 \
     scipy>=1.10.0 \
